# send_me_bot

./: README.md  pyproject.toml
database/: __init__.py
database/schemas/: Messages.sql  Users.sql
instance/: README.txt
