[tool.poetry]
name = "send-me-bot"
version = "0.1.0"
description = "Send message to user via bot"
authors = ["jojopko <gamerat.github@gmail.com>"]
readme = "README.md"
packages = [{include = "send_me_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.2"
flask = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
